# server/src/main/java/com/tailoredshapes/inventoryserver/Router.java
@@ -4,6 +4,7 @@ import java.util.List;
 
 import com.tailoredshapes.inventoryserver.dao.DAO;
 import com.tailoredshapes.inventoryserver.model.Inventory;
+import com.tailoredshapes.inventoryserver.model.User;
 import com.tailoredshapes.inventoryserver.parsers.Parser;
 import com.tailoredshapes.inventoryserver.repositories.Repository;
 import com.tailoredshapes.inventoryserver.repositories.hibernate.HibernateRepository;
@@ -20,7 +21,11 @@ import static com.tailoredshapes.inventoryserver.Providers.inventoryList;
 import static com.tailoredshapes.inventoryserver.Providers.inventoryParser;
 import static com.tailoredshapes.inventoryserver.Providers.inventorySerialiser;
 import static com.tailoredshapes.inventoryserver.Providers.inventoryUrlBuilder;
-import static com.tailoredshapes.inventoryserver.repositories.hibernate.HibernateLookers.inventoryById;
+import static com.tailoredshapes.inventoryserver.Providers.userDAO;
+import static com.tailoredshapes.inventoryserver.Providers.userList;
+import static com.tailoredshapes.inventoryserver.Providers.userParser;
+import static com.tailoredshapes.inventoryserver.Providers.userSerialiser;
+import static com.tailoredshapes.inventoryserver.Providers.userUrlBuilder;
 import static com.tailoredshapes.underbar.UnderBar.map;
 import static spark.Spark.get;
 import static spark.Spark.post;
@@ -32,7 +37,8 @@ public interface Router {
       res.type("application/json");
       return persistent(emf, (em) -> inventoryList.apply(em).list());
     }, (result) -> {
-      JSONArray resp = new JSONArray(map((List<Inventory>) result, (i) -> new JSONObject(inventorySerialiser.serialise(i))));
+      JSONArray resp =
+        new JSONArray(map((List<Inventory>) result, (i) -> new JSONObject(inventorySerialiser.serialise(i))));
       return resp.toString();
     });
 
@@ -49,11 +55,40 @@ public interface Router {
 
     get("/inventories/:id", "application/json", (req, res) ->
       persistent(emf, (em) -> {
+        res.type("application/json");
         Repository.FindById<Inventory> byId = HibernateRepository.findById(Inventory.class, em);
         return byId.findById(Long.parseLong(req.params("id")));
       }), (result) ->
-      inventorySerialiser.serialise((Inventory) result)
+          inventorySerialiser.serialise((Inventory) result)
     );
+
+    get("/users", "application/json", (req, res) -> {
+          res.type("application/json");
+          return persistent(emf, (em) ->
+            userList.apply(em).list());
+        },
+        (result) -> {
+          JSONArray resp = new JSONArray(map((List<User>) result, (i) -> new JSONObject(userSerialiser.serialise(i))));
+          return resp.toString();
+        });
+
+    post("/users", "application/json", (req, res) ->
+      transactional(emf, (em) -> {
+        DAO<User> dao = userDAO.apply(em);
+        Parser<User> parser = userParser.apply(em);
+        User user = parser.parse(req.body());
+        User saved = Repository.save(dao).save(user);
+
+        res.redirect(userUrlBuilder.build(saved));
+        return null;
+      }));
+
+    get("/users/:name/:id", "application/json", (req, res) -> persistent(emf, (em) -> {
+          res.type("application/json");
+          Repository.FindById<User> byId = HibernateRepository.findById(User.class, em);
+          return byId.findById(Long.parseLong(req.params("id")));
+        }),
+        (result) -> userSerialiser.serialise((User) result));
   }
 }
 
